fixed scroll bug on firefox

--- a/public/stylesheets/presta.css
+++ b/public/stylesheets/presta.css
@@ -7,6 +7,13 @@
 
 #presta #details {
   background: #f5f5f5;
+  position: relative;
+}
+
+#anchor {
+  position: absolute;
+  top: -10vh;
+  left: 0;
 }
 
 /* the whole grid */
@@ -311,7 +318,6 @@
   background: #ffffff;
   opacity: 1;
   width: 50vw;
-  padding: 50px 30px;
   margin-top: 15vh;
   margin-bottom: 15vh;
   overflow-y: scroll;
@@ -338,16 +344,6 @@
   margin: 30px 0;
 }
 
-#invoice input,
-#invoice textarea {
-  border: 1px solid #adadad;
-  padding: 10px;
-}
-
 #invoice #send-invoice {
   margin-right: 10px;
-}
-
-.form-group {
-  margin: 10px 0;
 }
