--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -351,4 +351,8 @@ html {
   justify-content: center;
 }
 
+.justify-e {
+  justify-content: flex-end;
+}
+
 /* --------------------------- */
